--- a/style.css
+++ b/style.css
@@ -68,9 +68,25 @@ nav a:hover {
 }
 
 .resume-image img {
-    max-width: 120px;
+    max-width: 300px;
     height: auto;
-    border-radius: 50%;
+    border-radius: 5%;
+    margin: 1rem auto;
+    display: block;
+}
+
+.picofme-image img {
+    max-width: 300px;
+    height: auto;
+    border-radius: 5%;
+    margin: 1rem auto;
+    display: block;
+}
+
+.port-image img{
+    max-width: 300px;
+    height: auto;
+    border-radius: 5%;
     margin: 1rem auto;
     display: block;
 }
