--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ img.logo-image {
 }
 
 img.resume-image {
-    max-width: px;
+    max-width: 700px;
     height: auto;
     border-radius: 7px;
     margin: 1rem auto;
