--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ main {
 
 .port-image img {
   display: block;
-  max-width: 800px;
+  max-width: 1000px;
   width: 90%;
   height: auto;
   margin: 1rem auto 2rem auto;
@@ -170,7 +170,11 @@ main {
   align-items: flex-start;
 }
 
-
+.project img {
+  max-width: 350px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.07);
+}
 
 
 form label {
