--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ img.picofme-image {
 img.resume-image {
   display: block;
   max-width: 1100px;
-  width: 90%;
+  width: auto;
   height: auto;
   margin: 1rem auto 2rem auto;
   border-radius: 15px;
@@ -152,7 +152,7 @@ img.resume-image {
 img.port-image {
   display: block;
   max-width: 1000px;
-  width: 90%;
+  width: auto;
   height: auto;
   margin: 1rem auto 2rem auto;
   border-radius: 15px;
@@ -206,7 +206,7 @@ form button {
 }
 
 form button:hover {
-  background-color: #e0554f;
+  background-color: #ff8888;
 }
 
 
