--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ footer {
 }
 
 .social-box {
-  background-color: #f1f1f1;
+  background-color: #ff8888;
   color: #333;
   text-decoration: none;
   padding: 1rem 2rem;
