--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
   top: 0;
   z-index: 1000;
   background-color: var(--surface);
-  padding: 1rem 2rem;
+  padding: .5rem 1.5rem;
   text-align: center;
   height: 100px;
   display: flex;
