--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ header .resume-image img {
   display: block;
   border-radius: 12px;
   box-shadow: 0 4px 8px var(--shadow-color);
+  gap: .5rem;
 }
 
 
